fix download buttons wrapping

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -349,6 +349,7 @@ kbd {
             color: white;
             font-size: 1.35rem;
             font-weight: 200;
+            text-wrap: nowrap;
             // &:after {
             //     content: "/images/icons/download-icon";
             //     display: inline-block;
